# reporting-risk-cascade

./: .env.example  .gitignore  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
config/: benchmark.yaml  data_prep.yaml  paper1.yaml  public_cascade.yaml  public_data.yaml  study.yaml
docs/: development_audit_prompt.md  faq.md  future_work.md  index.md  manuscript_audit_prompt.md  paper_plan.md  results_snapshot.md
docs/assets/javascripts/: mermaid-init.js
docs/assets/stylesheets/: extra.css
docs/superpowers/plans/: 2026-07-10-canonical-run-manuscript-finalization.md  2026-07-10-evidence-pipeline-implementation.md  2026-07-10-reporting-reproducibility-implementation.md  2026-07-12-reporting-contract-results-discussion.md
docs/superpowers/specs/: 2026-07-10-reporting-risk-cascade-revision-design.md
scripts/: build_linkage_bridge.py  build_manuscript_package.py  build_reviewer_package.py  convert_raw_dataset.py  export_farr_gvkey_ciks.R  export_farr_support_data.R  fetch_public_data.py  generate_sample_dataset.py  monitor_public_lake.py  prepare_farr_gvkey_cik_bridge.sh  prepare_farr_support_data.py  prepare_farr_support_data.sh  prepare_gvkey_cik_crosswalk.py  refresh_results_snapshot.py  run_benchmark.py  run_bridge_probe.py  run_construct_overlap.py  run_data_prep.py  run_paper1.py  run_paper2.py  run_public_cascade.py  run_public_lake_full.sh  run_study.py  verify_canonical_run.py
src/: __init__.py  benchmark.py  bridge.py  construct_overlap.py  data_prep.py  linkage.py  paper1.py  paper2.py  peer_comparison.py  provenance.py  public_cascade.py  public_data.py  public_lake.py  public_peer_comparison.py  ranking_metrics.py  raw_dataset.py  sample_dataset.py  table_io.py
tests/: canonical_fixture.py  test_benchmark.py  test_bridge.py  test_canonical_run.py  test_construct_overlap.py  test_data_prep.py  test_docs.py  test_linkage.py  test_manuscript_package.py  test_peer_comparison.py  test_provenance.py  test_public_cascade_interfaces.py  test_public_lake.py  test_public_peer_comparison.py  test_raw_dataset.py  test_repo_hygiene.py  test_reviewer_package.py  test_table_io_sample.py
