[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reporting-risk-cascade"
version = "0.0.0"
requires-python = ">=3.13"
authors = [{ name = "Tuoyuan Cheng", email = "tuoyuan.cheng@nus.edu.sg" }]
description = "Public reporting-risk cascade and timing-aware misstatement benchmark workflow."
readme = "README.md"
dependencies = [
    "duckdb>=1.2,<2",
    "imbalanced-learn>=0.12,<1",
    "joblib>=1.4,<2",
    "lightgbm>=4,<5",
    "numpy>=2,<3",
    "pandas>=2.2,<3",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
    "requests>=2.32,<3",
    "scikit-learn>=1.2,<2",
    "scipy>=1.10,<2",
    "statsmodels>=0.14,<1",
    "xgboost>=2,<4",
]

[dependency-groups]
dev = [
    "ipykernel>=6,<7",
    "matplotlib>=3.8,<4",
    "pytest>=8,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.5,<10", "pymdown-extensions>=10.15,<11"]

[tool.uv]
package = false
managed = true
default-groups = ["dev"]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 99

[tool.ruff.lint.pycodestyle]
max-doc-length = 99
max-line-length = 99

[tool.coverage.run]
source = [
    "src.benchmark",
    "src.bridge",
    "src.data_prep",
    "src.public_cascade",
    "src.ranking_metrics",
    "src.sample_dataset",
    "src.table_io",
]

[tool.coverage.report]
fail_under = 95
precision = 2
show_missing = true
skip_covered = true
